--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,7 +5,7 @@
     <title>Pizza Recipe</title>
   </head>
   <body>
-    <h1>How to cook a pizza</h1>
+    <h1>How to Cook a Pizza</h1>
     <img
       src="https://www.allrecipes.com/thmb/fu-ChBPkr18Y55dcBf7LTaVK9oI=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/20171-quick-and-easy-pizza-crust-VilmaNg-4x3-f3d3bfe73e3a47b6b65a7da6de3f213d.jpg"
       alt="Pizza Image"
