--- a/index.html
+++ b/index.html
@@ -7,6 +7,16 @@
 
   <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/pizza.html">Pizza Recipe</a>
+    <ul>
+      <li>
+        <a href="recipes/pizza.html">Pizza Recipe</a>
+      </li>
+      <li>
+        <a href="recipes/bakedchicken.html">Baked Chicken Recipe</a>
+      </li>
+      <li>
+        <a href="recipes/butternoodles.html">Butter Noodles Recipe</a>
+      </li>
+    </ul>
   </body>
 </html>
